labor/vagrantkubernetes/teststuff/busybox.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busybox-sleep
spec:
  containers:
  - name: busybox
    image: busybox
    args:
    - sleep
    - "1000000"
---
apiVersion: v1
kind: Pod
metadata:
  name: busybox-sleep-less
spec:
  containers:
  - name: busybox
    image: busybox
    args:
    - sleep
    - "1000"

---
apiVersion: v1
kind: Pod
metadata:
  name: ubunutu-sleeper
spec:
  containers:
  - name: ubuntu
    image: ubuntu
    args:
    - sleep
    - "60000"
